fixed overflow problem on feed page

--- a/client/src/components/Post/style.css
+++ b/client/src/components/Post/style.css
@@ -1,20 +1,62 @@
-div .container {margin-top: 210px;}
+div .container {
+  margin-top: 210px;
+}
 
-div .avatar {width: 70px; height: 70px; border: solid #1f6421 3px; margin-top: -40px;}
+div .avatar {
+  width: 70px;
+  height: 70px;
+  border: solid #1f6421 3px;
+  margin-top: -40px;
+}
 
-div .mainField  { width: 99%; height: 30px;}
-div .locationField { width: 70%; height: 50px; margin-top: 20px;}
+div .mainField {
+  width: 99%;
+  height: 30px;
+}
+div .locationField {
+  width: 70%;
+  height: 50px;
+  margin-top: 20px;
+}
 
-div .MuiFormLabel-root.Mui-focused { color: dimgray; padding: 0px 10px; margin-top: 0px; }
-div .MuiFormLabel-root { color: dimgray; padding: 0px 10px; font-size: 18px; margin-top: -10px;}
-div .MuiOutlinedInput-input {background: white; border-radius: inherit; padding: 10px 14px;}
+div .MuiFormLabel-root.Mui-focused {
+  color: dimgray;
+  padding: 0px 10px;
+  margin-top: 0px;
+}
+div .MuiFormLabel-root {
+  color: dimgray;
+  padding: 0px 10px;
+  font-size: 18px;
+  margin-top: -10px;
+}
+div .MuiOutlinedInput-input {
+  background: white;
+  border-radius: inherit;
+  padding: 10px 14px;
+}
 
-div .postButton {margin: 20px 0px 10px 10px; width: 27%; height: 40px; background: #f7ee24; font-size: 18px; font-weight: 600;}
-div .postButton:hover {  background: #f7ee24;}
+div .postButton {
+  margin: 20px 0px 10px 10px;
+  width: 27%;
+  height: 40px;
+  background: #f7ee24;
+  font-size: 18px;
+  font-weight: 600;
+}
+div .postButton:hover {
+  background: #f7ee24;
+}
 
-div .MuiOutlinedInput-root.Mui-focused  .MuiOutlinedInput-notchedOutline {border-color: #53900f;}
+div .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
+  border-color: #53900f;
+}
 
 @media only screen and (max-width: 600px) {
-    div .avatar {width: 100px; height: 100px; border: solid #1f6421 6px; margin-top: -10px;}
-
+  div .avatar {
+    width: 100px;
+    height: 100px;
+    border: solid #1f6421 6px;
+    margin-top: -10px;
+  }
 }
